src/test/resources/testcases/invalid/types/void_rhs.tc
void foo() {
    return;
}
int main() {
    int x = foo(); // Error: RHS cannot be void
    return 0;
}
